# ComfyUI-PS_Flatten_Image

./: README.md  __init__.py  flatten_image_node.py  pyproject.toml
example workflow/: PS flatten image example.json
